--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,13 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "PORT=4242 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "format": "prettier --write \"**/*.{js,jsx}\""
-  },
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "format": "prettier --write \"**/*.{js,jsx}\""
+},
   "eslintConfig": {
     "extends": [
       "react-app",
